G55-38 Updated privacy policy

--- a/ui2/src/app/component/info/rgpd/rgpd.component.html
+++ b/ui2/src/app/component/info/rgpd/rgpd.component.html
@@ -65,110 +65,117 @@
     <h5>MATEUS FERNANDES (1210821)</h5>
   </div>
 
-  <h2>Introdução</h2>
-  <div>Este relatório tem como âmbito identificar, descrever e referir a finalidade dos dados pessoais que vão ser
-    utilizados na aplicação desenvolvida para o projeto integrador do 1º Semestre do 3º Ano, designado por
-    “RobDroneGo”.
-    Neste projeto existem vários dados que vão ser necessários recolher e tratar, visto que determinados
-    elementos do sistema (robôs) estão constantemente a recolher dados pessoais.
-    Para a realização deste mesmo, o grupo de trabalho teve em consideração o Regulamento Geral de
-    Proteção de Dados (RGPD) de 4 de maio de 2016, documento que visa proteger a privacidade e o
-    tratamento dos dados pessoais dos cidadãos europeus.
+  <h2>I. Introdução</h2>
+  <div>Ao usar os serviços da RobDroneGO, você confia-nos os seus dados pessoais. E temos o compromisso de manter essa mesma confiança.
+    Para isso, vamos explicar as nossa práticas de política de privacidade.
+    Este aviso descreve os dados pessoais que recolhemos, como são tratados e compartilhados e as suas opções em relação a eles, bem como a sua respetiva finalidade de recolha e tratamento.
   </div>
 
-  <h2>Identificação e finalidade dos dados pessoais</h2>
-  <div>Ao analisar o artigo 5º ponto 1, que se refere aos princípios do tratamento de dados pessoais, que serão
-    necessários posteriormente, podemos indicar assim os mesmos:
-    <h5>Username</h5>
-    Nome que irá identificar unicamente o utilizador, para ser possível realizar um login na aplicação.
-    <h5>Nome</h5>
-    Tratamento formal para o utilizador e para estabelecer uma comunicação direcionada.
-    <h5>Número de Bilhete de Identidade ou Cartão de Cidadão</h5>
-    Identifica unicamente cada cidadão, e tem como finalidade a verificação da entidade do titular dos dados e
-    cumprimento dos requisitos legais.
-    <h5>Número de Contribuinte</h5>
-    Identificação fiscal de cada utilizador, com finalidade do cumprimento de obrigações fiscais impostas por
-    uma entidade reguladora.
-    <h5>Morada</h5>
-    Forma de contacto físico com o utilizador, tendo como finalidade a correspondência direta com o mesmo.
-    <h5>Número de Telefone</h5>
-    Número de telefone do utilizador, que tem como finalidade a correspondência direta, a notificação de
-    serviços e forma de verificação de entidade individual.
-    <h5>Registo de Imagem e Voz</h5>
-    Registos que os robôs efetuarão do ambiente e utilizadores em redor, com um conjunto de finalidades. Este
-    tipo de dados vai ser recolhido não só para os utilizadores do sistema, mas também para associados.
-    • Segurança e Monitorização
-    • Treino e Melhoria do Desempenho, para avaliar o desempenho dos robôs
-    • Resolução de Incidentes, onde as gravações podem ser úteis para implementar medidas corretivas
-    • Cumprimento de Requisitos Legais
-    Sendo assim, a empresa que opera o serviço “RobDroneGO” é responsável por este mesmo tratamento dos
-    dados, e tem de ser capaz de comprová-lo, tal como diz o 2º ponto do artigo nº5.
+  <h2>II. Recolha e utilização de dados</h2>
+  <h3>A. Dados recolhidos</h3>
+  <div>
+    A RobDroneGO recolhe dados fornecidos pelos utilizadores, que incluem: <br>
+    <li>
+      Username
+    </li>
+    <li>
+      Nome
+    </li>
+    <li>
+      Número de Contribuinte
+    </li>
+    <li>
+      Número de Telefone
+    </li>
+    <li>
+      Email
+    </li>
+    <li>
+      Registo de Imagem e voz
+    </li>
+    Esta recolha é realizada para os utilizadores poderem criar ou atualizar a sua conta para usufruir dos serviços da RobDroneGO.
   </div>
+  
+  <h3>B. Como utilizamos os dados</h3>
+  <div>
+    A RobDroneGO utiliza os dados para conseguir disponibilizar serviços e otimizar o desempenho dos seus produtos. Também utilizamos dados: <br>
+    <li>
+      Para reforçar a segurança e a proteção dos nossos utilizadores e serviços
+    </li>
+    <li>
+      Para investigação e aprimoramento dos nossos serviços
+    </li>
+    <li>
+      No âmbito de procedimentos legais
+    </li>
+    <li>
+      Para otimizar o desempenho dos nossos produtos, e fornecer o melhor serviço possível
+    </li>
+    <li>
+      Para criar/atualizar uma conta na RobDroneGO
+    </li>
+  </div>
+  
+  <h3>III. Tratamento dos Dados Pessoais</h3>
+  <div>
+    Os registos dos dados pessoais foram acordados numa primeira fase do tratamento dos dados, o que implica o seu consentimento sobre este mesmo. 
+    O fundamento da licitude é um consentimento que é solicitado no âmbito do contrato, para os utilizadores do sistema RobDroneGO.
+  
+    O responsável pelo tratamento é a própria empresa RobDroneGO, com principal contacto RobDroneGO-geral&#64;robdrone.pt
+  
+  </div>
+  
+  <h3>IV. Retenção e Eliminação dos Dados</h3>
+  <div>
+    Os dados são retidos pela RobDroneGO durante o tempo que for necessário para os fins descritos acima, que varia dependendo do tipo de dados e do tipo de utilizador.
+    
+    Retemos dados:
+    <li>
+      Enquanto as contas dos utilizadores estiverem ativas, se esses dados forem necessários para fornecer os nossos serviços da RobDroneGO. Por exemplo, dados da conta do utilizador.
+    </li>
+    <li>
+      Durante 30 dias, imagens e vídeos processados pelos nossos equipamentos dentro das instalações onde operamos.
+    </li>
+    Os utilizadores podem solicitar a eliminação da respetiva conta através dos menus de Privacidade na aplicação RobDroneGO, ou através do email da RobDroneGO (RobDroneGO-geral&#64;robdrone.pt)
+  </div>
+  
 
-  <h2>Tratamento e fundamento para os dados utilizados</h2>
-  <h3>Consentimento</h3>
-  <div>Os registos dos dados pessoais foram acordados numa primeira fase do tratamento dos dados, o que implica
-    o seu consentimento sobre este mesmo.
-    Ao observarmos o artigo 6º ponto 1, verificamos que o tratamento é consentido através do que está
-    apresentado na alínea b), onde o tratamento é necessário para a execução de um contrato no qual o titular
-    dos mesmos faz parte, bem como exigências pré contratuais, quando os titulares envolvidos fazem parte do
-    sistema. Já os outros titulares de dados que estão associados ao sistema, o tratamento é consentido através
-    do pressuposto na alínea a), onde o titular deu o seu consentimento dos seus dados pessoais para uma ou
-    mais finalidades específicas, neste caso, a captação de imagem e voz.
-    Com o consentimento realizado pelo titular dos dados, é possível efetuar um contrato de trabalho, através
-    da assinatura do titular, portador do seu respetivo Cartão de Cidadão ou Bilhete de Identidade.
-    O direito a retirar o consentimento explicitamente exposto no artigo 7º ponto 3 para os titulares de dados
-    necessários para processos contratuais implica a revogação do processo contratual, já que toda a informação
-    facultada é necessária para exercer funções, como explícito no artigo 7º ponto 4 deste mesmo regulamento.
-    As situações descritas no artigo 9º ponto 1 e no artigo 10º são garantidas ao titular dos dados, para que em
-    qualquer situação irregular possa ser facultada às autoridades competentes e receber justificação pelo
-    responsável do tratamento dos dados.
-    O documento/registo previamente mencionado e devidamente assinado e aprovado por ambas as partes,
-    pode ser apresentado pelo responsável como evidência de consentimento, em conformidade com o disposto
-    no artigo 7.º, ponto 1.
-  </div>
-  <h3>Utilização e Responsável do Tratamento dos Dados</h3>
-  <div>Após o consentimento do titular, fica claro que a empresa “RobDroneGo” será a responsável pelo
-    tratamento dos dados facultados pelos titulares destes mesmos.
-    Relativamente aos dados relativos ao registo de imagem e voz, estes dados vão ser utilizados para o robô
-    efetuar um serviço eficiente e de qualidade, visto que os dados recolhidos vão ser utilizados para captar o
-    ambiente que o rodeia, e assim obter informações necessárias para realizar o percurso de uma forma
-    inteligente.
-    Quanto aos outros dados mencionados, estes têm todos como finalidade a identificação única dos titulares
-    com processos contratuais, necessários segundo o artigo nº10, para a verificação de infrações cometidas
-    pelos titulares.
-  </div>
+  <h3>V. Direitos do Titular dos Dados</h3>
+  <div>
+    1. Direito à Informação (Right to Information)
+O titular dos dados tem o direito de ser informado sobre como os seus dados pessoais são recolhidos, processados e utilizados pela RobDroneGO. Este direito é essencial para garantir a transparência no tratamento de dados.
 
-  <h3>Direitos do Titular dos Dados</h3>
-  <div>Os direitos do titular são aplicados se seguirem os pontos apresentados no artigo 12º, ao concretizarem a
-    transparência da informação e comunicação. O cumprimento deste artigo pode ser verificado através dos
-    pontos a seguir mencionados, relativos aos direitos do titular, consultar, alterar, apagar, e opor-se a este
-    tratamento dos mesmos.
-    Relativamente ao direito de consultar, como o registo dos dados é realizado sem a presença do titular, é
-    necessário apresentar um conjunto de informações na fase em que o titular apresenta consentimento, e assim
-    cumprindo o apresentado no artigo 14º. O titular destes mesmos dados pode consultá-los a qualquer
-    momento, e assim apresentar ao responsável (a empresa “RobDroneGO”) se necessário alguma
-    irregularidade, tal como apresentado no artigo 15º ponto 1.
-    Sendo assim, tendo em conta o ponto anterior, leva ao segundo direito do titular dos dados, relacionado
-    com a alteração dos mesmos, de acordo com o artigo 16º, que refere que o titular dos dados tem o direito
-    de apresentar ao responsável um pedido de retificação e alteração dos seus dados pessoais incompletos, por
-    meio de uma declaração adicional.
-    O terceiro direito do titular está relacionado com o apagamento dos dados, permitindo ao mesmo obter do
-    responsável já identificado acima pelo tratamento do apagamento dos seus dados pessoais. Contudo, os
-    pontos 1 e 2 do artigo 17º não podem prevalecer no caso de uma obrigatoriedade contratual. Sendo assim,
-    podem exercer deste direito quando:
-    • Término do contrato no seu prazo estipulado;
-    • Rescisão do contrato a qualquer momento, sem prejudicar o titular, evidenciando o direito de oposição
-    conforme delineado no artigo 21.º, pontos 1, 2 e 3;
-    • Uso indevido de quaisquer dados mencionados no processo de consentimento;
-    • Utilização indevida de dados não especificados no processo de consentimento.
-    Após a exerção deste direito, o responsável mencionado fica encarregue de apagar todos os dados do titular
-    relacionados com a organização, tal como consta no artigo 17º ponto 2, e assim notificar todas as mudanças
-    efetuadas ao titular dos dados, tal como pressuposto no artigo 19º.
+2. Direito de Acesso (Right of Access)
+O titular dos dados tem o direito de aceder aos seus dados pessoais que são mantidos pela RobDroneGO. Isso inclui a possibilidade de solicitar informações sobre quais dados específicos estão a ser processados e como estão a ser utilizados.
+
+3. Direito de Retificação (Right to Rectification)
+Caso os dados pessoais estejam incorretos ou incompletos, o titular dos dados tem o direito de solicitar a retificação ou atualização desses dados.
+
+4. Direito de Apagamento (Right to Erasure)
+O titular dos dados pode solicitar a eliminação dos seus dados pessoais mantidos pela RobDroneGO. No entanto, existem limitações a este direito, e a empresa só pode reter os dados pelo tempo necessário para os fins descritos.
+
+5. Direito à Portabilidade dos Dados (Right to Data Portability)
+O titular dos dados tem o direito de receber os seus dados pessoais num formato estruturado, de uso comum e de leitura automática, e pode transmitir esses dados a outra entidade, se desejado.
+
+6. Direito de Oposição (Right to Object)
+O titular dos dados tem o direito de opor-se ao processamento dos seus dados pessoais em certas circunstâncias, como para fins de marketing direto.
+
+7. Direito de Limitação do Processamento (Right to Restriction of Processing)
+O titular dos dados pode solicitar a restrição do processamento dos seus dados em determinadas situações. Isso significa que a RobDroneGO pode armazenar os dados, mas não os processar além do necessário.
+
+8. Direito de Não Ser Sujeito a Decisões Automatizadas (Right Not to Be Subject to Automated Decision-Making)
+O titular dos dados tem o direito de não ser sujeito a decisões baseadas unicamente no processamento automatizado, incluindo a criação de perfis, que tenham efeitos significativos sobre ele.
+
+<br>
+
+Contacto para Exercer os Direitos dos Titulares dos Dados
+Para exercer qualquer um destes direitos, o titular dos dados pode entrar em contacto com a RobDroneGO através do contacto principal: RobDroneGO-geral&#64;robdrone.pt.
+
+Estes direitos são essenciais para garantir a privacidade e proteção dos dados pessoais dos utilizadores da RobDroneGO.
   </div>
 
   <h2>Conclusão</h2>
-  <div>Em resumo, o relatório destaca a importância do consentimento, responsabilidade e transparência
+  <div>Em resumo, destaca a importância do consentimento, responsabilidade e transparência
     na gestão de dados pessoais, reforçando o compromisso da empresa com a proteção da privacidade dos
     indivíduos e o cumprimento das regulamentações de proteção de dados, e a sua responsabilidade perante o
     incumprimento de qualquer pressuposto, bem como a sua devida correção.
