--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -3,14 +3,14 @@
   <h1 class="h1">RobDroneGO</h1>
 
   <!--Gestor Utilizadores Menu-->
-  <button mat-button [matMenuTriggerFor]="gestorUtilizadoresMenu">Gestor Utilizadores</button>
+  <button mat-button *ngIf="role === 'Gestor de Utilizadores'" [matMenuTriggerFor]="gestorUtilizadoresMenu">Gestor Utilizadores</button>
   <mat-menu #gestorUtilizadoresMenu="matMenu">
     <button mat-menu-item (click)="criarUser()">Criar User</button>
     <button mat-menu-item (click)="pedidoUser()">Aceitar ou recusar pedidos de utentes</button>
   </mat-menu>
 
   <!--Gestor de Campus Menu-->
-  <button mat-button [matMenuTriggerFor]="gestorCampusMenu">Gestor Campus</button>
+  <button mat-button *ngIf="role === 'GestorCampus'" [matMenuTriggerFor]="gestorCampusMenu">Gestor Campus</button>
   <mat-menu #gestorCampusMenu="matMenu">
     <button mat-menu-item [matMenuTriggerFor]="edificioMenu">Edificio</button>
     <button mat-menu-item [matMenuTriggerFor]="pisoMenu">Piso</button>
@@ -53,7 +53,7 @@
   </mat-menu>
 
   <!--Gestor de Tarefas Menu-->
-  <button mat-button [matMenuTriggerFor]="gestorTarefasMenu">Gestor Tarefa</button>
+  <button mat-button *ngIf="role === 'GestorTarefas'" [matMenuTriggerFor]="gestorTarefasMenu">Gestor Tarefa</button>
   <mat-menu #gestorTarefasMenu="matMenu">
     <button mat-menu-item (click)="calcularCaminho()">Obter percurso entre dois edificios</button>
     <button mat-menu-item (click)="createPiso()">Analise de complexidade</button>
@@ -68,7 +68,7 @@
   </mat-menu>
 
   <!--Gestor de Frota Menu-->
-  <button mat-button [matMenuTriggerFor]="gestorFrotaMenu">Gestor Frota</button>
+  <button mat-button *ngIf="role === 'GestorFrota'" [matMenuTriggerFor]="gestorFrotaMenu">Gestor Frota</button>
   <mat-menu #gestorFrotaMenu="matMenu">
     <button mat-menu-item [matMenuTriggerFor]="tipoRoboMenu">Tipo Robo</button>
     <button mat-menu-item [matMenuTriggerFor]="roboMenu">Robo</button>
@@ -87,7 +87,7 @@
   </mat-menu>
 
   <!--Utente Menu-->
-  <button mat-button [matMenuTriggerFor]="utenteMenu">Utente</button>
+  <button mat-button *ngIf="role === 'Utente'" [matMenuTriggerFor]="utenteMenu">Utente</button>
   <mat-menu #utenteMenu="matMenu">
     <button mat-menu-item (click)="deleteUser()">Eliminar conta</button>
     <button mat-menu-item (click)="updateUser()">Atualizar dados</button>
@@ -96,7 +96,7 @@
   </mat-menu>
 
   <!--Visualização-->
-  <button mat-button (click)="view()">Visualização</button>
+  <button mat-button *ngIf="role === 'GestorCampus'" (click)="view()">Visualização</button>
 
   <!--Asist Menu-->
   <button mat-button [matMenuTriggerFor]="asistMenu">Asist</button>
