--- a/ui2/src/app/component/tarefa/tarefa-gestao-requisicao/tarefa-gestao-requisicao.component.html
+++ b/ui2/src/app/component/tarefa/tarefa-gestao-requisicao/tarefa-gestao-requisicao.component.html
@@ -8,7 +8,7 @@
     <div>
       <div class="search-container">
         <mat-form-field appearance="fill">
-            <label>Search by KeyWord</label> <input matInput placeholder="key word" autocomplete="off"
+            <label>Procurar por palavra chave</label> <input matInput placeholder="key word" autocomplete="off"
                 (keyup)="filterData($event)">
         </mat-form-field>
       </div>
@@ -49,7 +49,7 @@
       </table>
 
       <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
-      <button (click)="goBack()">Back</button>
+      <button (click)="goBack()">Retroceder</button>
     </div>
   </div>
 </body>
