--- a/ui2/src/app/component/user/deleteUser/delete-user.component.html
+++ b/ui2/src/app/component/user/deleteUser/delete-user.component.html
@@ -13,7 +13,7 @@
     </div>
     <div>
       <button (click)="deleteUser()">Apagar User</button>
-      <button (click)="goBack()">Back</button>
+      <button (click)="goBack()">Retroceder</button>
     </div>
   </div>
 </body>
