G55-31 Updated frontend page

--- a/ui2/src/app/component/user/downloadInfo/download-info.component.html
+++ b/ui2/src/app/component/user/downloadInfo/download-info.component.html
@@ -13,7 +13,7 @@
     </div>
     <div>
       <button (click)="downloadInfo()">Download</button>
-      <button (click)="goBack()">Back</button>
+      <button (click)="goBack()">Retroceder</button>
     </div>
   </div>
 </body>
