G55-32 Updated frontend page

--- a/ui2/src/app/component/user/updateUser/update-user.component.html
+++ b/ui2/src/app/component/user/updateUser/update-user.component.html
@@ -24,7 +24,7 @@
     </div>
     <div>
       <button (click)="updateUser()">Atualizar dados</button>
-      <button (click)="goBack()">Back</button>
+      <button (click)="goBack()">Retroceder</button>
     </div>
   </div>
 </body>
