G55-49 Updated frontend page

--- a/ui2/src/app/component/user/registarUser/registar-user.component.html
+++ b/ui2/src/app/component/user/registarUser/registar-user.component.html
@@ -40,7 +40,7 @@
     </div>
     <div>
       <button (click)="criarUser()">Registar</button>
-      <button (click)="goBack()">Back</button>
+      <button (click)="goBack()">Retroceder</button>
     </div>
   </div>
 </body>
