G55-38 Updated frontend page

--- a/ui2/src/app/component/user/signUp/sign-up.component.html
+++ b/ui2/src/app/component/user/signUp/sign-up.component.html
@@ -42,7 +42,7 @@
     </div>
     <div>
       <button (click)="criarUtente()">Efetuar pedido</button>
-      <button (click)="goBack()">Back</button>
+      <button (click)="goBack()">Retroceder</button>
     </div>
   </div>
 </body>
