G55-19 FIXME: Corrigir erro de transição entre passagens.

--- a/ui2/src/app/component/visualizacao/visualizacao.component.html
+++ b/ui2/src/app/component/visualizacao/visualizacao.component.html
@@ -113,7 +113,7 @@
 </head>
 
 <body>
-    <div id="info">Detetado. Pressiona L!</div>
+    <div id="info"></div>
     <div id="parent">
         <div id="views-panel">
             <table class="views">
@@ -154,7 +154,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label>Projection:</label>
+                        <label>Projection.</label>
                         <select id="projection">
                             <option value="perspective">Perspective</option>
                             <option value="orthographic">Orthographic</option>
