G55-44 Updated frontend for politica de privacidade

--- a/ui2/src/app/component/info/rgpd/rgpd.component.html
+++ b/ui2/src/app/component/info/rgpd/rgpd.component.html
@@ -96,11 +96,11 @@
     Esta recolha é realizada para os utilizadores poderem criar ou atualizar a sua conta para usufruir dos serviços da RobDroneGO.
   </div>
   
-  <h3>B. Como utilizamos os dados</h3>
+  <h3>B. Finalidade dos dados</h3>
   <div>
     A RobDroneGO utiliza os dados para conseguir disponibilizar serviços e otimizar o desempenho dos seus produtos. Também utilizamos dados: <br>
     <li>
-      Para reforçar a segurança e a proteção dos nossos utilizadores e serviços
+      Para reforçar a segurança, monitorização e a proteção dos nossos utilizadores e serviços
     </li>
     <li>
       Para investigação e aprimoramento dos nossos serviços
@@ -158,7 +158,7 @@ O titular dos dados pode solicitar a eliminação dos seus dados pessoais mantid
 O titular dos dados tem o direito de receber os seus dados pessoais num formato estruturado, de uso comum e de leitura automática, e pode transmitir esses dados a outra entidade, se desejado.
 
 6. Direito de Oposição (Right to Object)
-O titular dos dados tem o direito de opor-se ao processamento dos seus dados pessoais em certas circunstâncias, como para fins de marketing direto.
+O titular dos dados tem o direito de opor-se ao processamento dos seus dados pessoais em certas circunstâncias.
 
 7. Direito de Limitação do Processamento (Right to Restriction of Processing)
 O titular dos dados pode solicitar a restrição do processamento dos seus dados em determinadas situações. Isso significa que a RobDroneGO pode armazenar os dados, mas não os processar além do necessário.
