G55-41 Updated frontend of the US

--- a/ui2/src/app/component/tarefa/tarefa-create/tarefa-create.component.html
+++ b/ui2/src/app/component/tarefa/tarefa-create/tarefa-create.component.html
@@ -48,6 +48,11 @@
           <th><label>Designacao de Tarefa: </label></th>
           <th><input type="string" [(ngModel)]="requisicao.tarefa" /></th>
         </tr>
+        
+        <tr>
+          <th><label>Descricao: </label></th>
+          <th><input type="string" [(ngModel)]="tarefa.descricao" /></th>
+        </tr>
       </table>
     </div>
     <div>
